@@ -1,3 +1,7 @@
+2021-01-05  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-07-31  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml: Update to 'bionic' and R 4.0.*
